🍐🚐 Checkpoint ./routes/api.js:10221761/84 ./views/products.ejs:10221761/361

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -45,12 +45,10 @@
         headers:{
           "content-type":"application/json",
         },
-        body: JSON.stringify({
-          productid:element.name.split(",")[1]
-        }),
         method: 'GET'
     }).then(resp=>{
-       num = JSON.stringify(resp);
+      console.log("RESPONSE" +resp)
+       console.log(JSON.stringify(resp).length)
     }, err=>{
       console.log(err);
     })
