🎉⛽️ Checkpoint ./views/products.ejs:10221761/61 ./routes/api.js:10221761/67

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -49,8 +49,8 @@
     
     fetch('https://ejs-views-practice.glitch.me/api/claims/products/'+element.name.split(";")[1])
       .then(resp=> {
-       window.location.reload();
         console.log("hey!")
+        console.log(resp)
         document.getElementById("claims").innerHTML="View "+JSON.stringify(resp)+" claims for this product";
       })
     
