🏐🛥 Checkpoint ./views/products.ejs:10221761/225 ./static/style.css:10221761/8

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -26,8 +26,8 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <div>
-      <h2 id="name">Product Name</h2>
+    <div class="d-flex justify-content-center flex-column">
+      <h2 id="name" >Product Name</h2>
       <p id="description">Product description</p>
       <button id="claims">View Claims for this Product</button>
       <p id="noclaims">No claims for this product</p>
