👟🚗 Checkpoint ./views/employees.ejs:10221761/59 ./views/product-claims.ejs:10221761/2357

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -13,14 +13,16 @@
       <th>Title</th>
     </tr>
   </thead>
+  <tbody>
   <% employees.forEach(result=>{ %>
     <tr>
       <td><%=result.firstname%></td>
       <td><%=result.lastname%></td>
       <td><%=result.title%></td>
     </tr>    
-  </tbody>
   <%})%>
+  </tbody>
+</table>
 <% } %>
 
   <button><a href="/">Return</a></button>
