--- a/views/product-claims.ejs
+++ b/views/product-claims.ejs
@@ -4,49 +4,30 @@
   <h1>
     <%=claims[0].product%> Claims
   </h1>
-<thead>
+<table class="table4">
+  <thead>
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Title</th>
+      <th>Customer</th>
+      <th>Issue</th>
+      <th>Status</th>
+      <th>Resolution</th>
+      <th>Date Opened</th>
+      <th>Date Closed</th>
+      <th>Technician</th>
     </tr>
   </thead>
   <tbody>
   <% claims.forEach(result=>{ %>
     <tr>
-      <td><%=result.firstname%></td>
-      <td><%=result.lastname%></td>
-      <td><%=result.title%></td>
-    </tr>    
-  </tbody>
+      <td><%=result.customer%></td>
+      <td><%=result.issue%></td>
+      <td><%=result.status%></td>
+      <td><%=result.resolution%></td>
+      <td><%=result.dateopened%></td>
+      <td><%=result.dateclosed%></td>
+      <td><%=result.employee%></td>
+    </tr>   
   <%})%>
+  </tbody>
+</table>
 <% } %>
-
-
-
-  <table>
-    <tr>
-      <td><%=result.description%></td>
-    </tr>    
-    <% }) %> 
-  </table>
-<% } %>
-
-
-<!--     customer: 'Russ Timco',
-    product: 'Desktop',
-    issue: 'Installation',
-    status: 'Closed',
-    description: 'Desktop return',
-    employee: 'Bruce Wayne',
-    dateopened: '2020-03-10T12:10:00.000Z',
-    resolution: 'return',
-    dateclosed: '2020-04-08T00:00:03.041Z',
-    claimid: 5,
-    productpurchaseid: 1,
-    issueid: 4,
-    employeeid: 3,
-    resolutionid: 1,
-    purchaseid: 1,
-    productid: 1,
-    customerid: 3 -->
