--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,3 +16,11 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+  
+<nav>  
+  <button><a href="/">Admin Home</a></button>
+  <button><a href="/claims">Claims</a></button>
+  <button><a href="/employees">Employees</a></button>
+  <button><a href="/customers">Customers</a></button>
+  <button><a href="/products">Products</a></button>
+</nav>
