--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -8,16 +8,14 @@
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
+      <th>Name</th>
       <th>Title</th>
     </tr>
   </thead>
   <tbody>
   <% employees.forEach(result=>{ %>
     <tr>
-      <td><%=result.firstname%></td>
-      <td><%=result.lastname%></td>
+      <td><%=result.firstname%> <%=result.lastname%></td>
       <td><%=result.title%></td>
     </tr>    
   <%})%>
@@ -25,6 +23,5 @@
 </table>
 <% } %>
 
-  <button><a href="/">Return</a></button>
 
 <%- include("partials/footer") %>
