📠🌦 Checkpoint ./views/index.ejs:10221761/236 ./views/claims.ejs:10221761/1019 ./static/style.css:10221761/839

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,7 @@
 <body>
   <h1>Admin Home</h1>
 </body>
-
+<p>
+  create claims, create customer, create product, edit and resolve claims, email question to tech about claim  
+</p>
 <%- include("partials/footer") %>
