--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -5,6 +5,17 @@
 <h1>
   Claims
 </h1>
+
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Edit Claims</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Create Claim</a>
+    <a href="#">Edit Claim</a>
+    <a href="#">Resolve Claim</a>
+    <a href="#">Close Claim</a>
+  </div>
+</div>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -43,6 +54,29 @@
  No Open Claims Found
 </h1>
 <%}%>
+
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
+
 
 <%- include("partials/footer") %>
 
