--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -6,7 +6,7 @@
   Claims
 </h1>
 
-<form id="add" onSubmit="add();">  
+<!-- <form id="add" onSubmit="add();">  
   
 <input value="" id="word" name="word" placeholder="word to add" type="text" >
 <input value="" id="def" name="def" placeholder="definition" type="text" >
@@ -17,20 +17,7 @@
 <form id="return">
 <button formaction="/" method"GET" type="submit">Return</button>
 </form>
-</form>
-
-
-<button onclick="edit()" id="conditionalBtn" class="button">Edit</button>
-
-<div id="editDiv"class="dropdown" style="display:none">
-  <button onclick="myFunction()" class="button">Edit Claims</button>
-  <div id="dropdown" class="dropdown-content">
-    <a href="">Create New </a>
-    <a href="">Edit</a>
-    <a href="">Resolve</a>
-    <a href="">Close</a>
-  </div>
-</div>
+</form> -->
 
 <table class="table table-hover">
   <thead>
@@ -51,15 +38,23 @@
 
   <tbody>
     <tr>
-      <td><%=result.customer%></td>
-      <td><%=result.product%></td>
-      <td><%=result.issue%></td>
-      <td><%=result.description%></td>
-      <td><%=result.employee%></td>
-      <td><%= dateOpened %></td>
-      <td><%=result.status%></td>
-      <td><%=result.resolution%></td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.customer%>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.product%>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.issue%>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.description%>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.employee%>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%= dateOpened %>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.status%>'</td>
+      <td><input type="button" class="dropdown" onclick="edit(this)" value='<%=result.resolution%>'</td>
     </tr>    
+    <div id="editDiv">
+      <div id="dropdownContent" class="dropdown-content">
+        <a href="">Create New </a>
+        <a href="">Edit</a>
+        <a href="">Resolve</a>
+        <a href="">Close</a>
+      </div> 
+    </div>
   </tbody>
   <%})%>
 
